--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "cros": "^1.1.0",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.1.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prettier": "^3.7.4"
   }
 }
