--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 PORT=8000 
 
-MONGODB_URL=mongodb+srv://muzu123:<muzuali12345>@demo1.wma8yrz.mongodb.net
+MONGODB_URL=mongodb+srv://muzu123:muzuali12345@demo1.wma8yrz.mongodb.net     
+CORS_ORIGIN=*
+ 
