--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "cros": "^1.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
