--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,18 @@
 PORT=8000 
 
-MONGODB_URL=mongodb+srv://muzu123:muzuali12345@demo1.wma8yrz.mongodb.net     
+MONGODB_URL=mongodb+srv://muzu123:muzuali12345@demo1.wma8yrz.mongodb.net/?appName=demo1 
+
 CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET=OTUCKcyqgZAaM0ogRHVIg9GG_Gzh9zMocyO3UtNdDNttoJ0X0-5n3DmVkx08MCFRSLD9cv1kBfLwK7fdO
+ 
+ ACCESS_TOKEN_EXPIRY=1d
+
+ REFRESH_TOKEN_SECRET=CJ0X0-5aMdDNttowD9cv0oVIg9GG_0Gzh9zMocyO3UtN1kBfLRn3Dmkx08MCFRSLHVTUkcyqgZAK7fdO
+  
+ REFRESH_TOKEN_EXPIRY=10D  
+ 
+CLOUDINARY_CLOUD_NAME=dvlpmscgj
+CLOUDINARY_API_KEY=498517717465546
+CLOUDINARY_API_SECRET=OMhiacEVF8rS-oct1JBSRRL18ok
  
